--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,152 @@
 en:
-  hello: "Hello world"
+  controllers:
+    concerns:
+      sessions_controller:
+        invalid_mail_pass: "Invalid email/password combination"
+        acc_not_activ: "Account not activated. Check your email for the activation link."
+      users_controller:
+        update_profile: "Profile updated"
+        plz_login: "Please log in."
+        user_delete: "User deleted"
+        no_such: "No such user"
+        no_delete: "Delete user error."
+        check_email: "Please check your email to activate your account."
+      account_activations_controller:
+        acc_activate: "Account activated!"
+        invalid_link: "Invalid activation link"
+      password_resets_controller:
+        send_with_pass: "Email sent with password reset instructions"
+        email_not_found: "Email address not found"
+        empty: "can't be empty"
+        has_been_reset: "Password has been reset."
+        has_expired: "Password reset has expired."
+        invalid: "Invalid"
+      micropost_controller:
+        micropost_create: "Micropost created!"
+        micropost_delete: "Micropost deleted"
+  mailers:
+    user_mailer:
+      acc_acti: "Account Activation"
+      pass_reset: "Password reset"
+  helpers:
+    application_helper:
+      base_title: "Ruby on Rails Tutorial Sample App"
+  layouts:
+    header:
+      sample_app: "Sample App"
+      home: "Home"
+      help: "Help"
+      log_in: "Log in"
+      log_out: "Log out"
+      the: "The "
+      and: "and"
+      profile: "Profile"
+      setting: "Settings"
+      user: "Users"
+      account: "Account"
+    footer:
+      the: "The "
+      by: "by "
+      author: "Michart"
+    variable:
+      contact: "Contact"
+      about: "About"
+      news: "News"
+      page: "Page"
+      sample: "sample"
+  micropost:
+    posted: "Posted"
+    delete: "delete"
+    ago: "ago."
+    you_sure: "You sure?"
+  password_resets:
+    new:
+      pass_reset_title: "Forgot password"
+      email: "Email"
+      submit: "Submit"
+    edit:
+      pass_reset_title_edit: "Reset password"
+      password: "Password"
+      confi: "Confirmation"
+      updated_pass: "Update password"
+  sessions:
+    new:
+      email: "Email"
+      password: "Password"
+      forgot_pass: "(forgot password)"
+      login_title: "Log in"
+      new_user: "New user? "
+      sign_up: "Sign up now!"
+      remember_me: "Remember me on this computer"
+  shared:
+    the_form_contain: "The form contains"
+    view_file: "view my profile"
+    micropost: "micropost"
+    compose: "Compose new micropost..."
+    post: "Post"
+    max_file: "Maximum file size is 5MB. Please choose a smaller file."
+  users:
+    welcome_to: "Welcome to the Sample App!"
+    invalid: "User invalid!"
+    new:
+      sign_up_title: "Sign up"
+      sign_up_des: "This will be a signup page for new users."
+      create_acc: "Create my account"
+    edit:
+      edit_title: "Edit user"
+      update_profile: "Update your profile"
+      change: "Change"
+      save_change: "Save changes"
+    index:
+      all_users: "All users"
+    user:
+      delete: "delete"
+      you_sure: "You sure?"
+    form:
+      name: "Name"
+      email: "Email"
+      password: "Password"
+      password_conf: "Password confimation"
+    show:
+      micropost: "Microposts"
+  user_mailer:
+    account:
+      hi: "Hi"
+      welcome_to_clink_on_acc: "Welcome to the Sample App! Click on the link below to activate your account:"
+      sample_app: "Sample App"
+      activate: "Activate"
+    password:
+      password_reset_title: "Password reset"
+      reset_pass: "Reset password"
+      reset_click_link: "To reset your password click the link below:"
+      link_expire: "This link will expire in two hours."
+      did_not_request: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+  static_pages:
+    home:
+      base_title: "Ruby on Rails Tutorial Sample App"
+      description: "This is the sample application for the tutorial."
+      sign_up: "Sign up now!"
+      micropost_feed: "Micropost Feed"
+    help:
+      help_title: "Help"
+      help_section: "Rails Tutorial help section"
+      get_help: "Get help on the Ruby on Rails Tutorial at the "
+      get_to_help: "To get help on this sample app, see the "
+      book: "Book"
+    ruby_on_rails: "Ruby on Rails Tutorial"
+    contact:
+      contact_title: "Contact"
+      contact_page: "Contact Page"
+      contact_ruby: "Contact the Ruby on Rails Tutorial about the sample app at the "
+    about:
+      about_title: "About"
+    conjuntion:
+      the: "The "
+      and: "and"
+      teach_web: "to teach web development with "
+  model:
+    concerns:
+      user:
+        user_id: "user_id = ?"
+  english: "English"
+  vietnamese: "Vietnamese"
