--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,12 +11,21 @@ en:
       no_delete: "Delete user error."
       create_failed: "Create fail"
   admin:
+    products:
+      index:
+        admin_page: "This page for admin"
+        allproduct: "All Product"
+        description: "this is page show all product"
     users:
       index:
         admin_page: "This page for admin"
         users_title: "All users"
         you_want: "You want to delete user. Are you sure?"
   layouts:
+    admin_layout:
+      allproduct: "All Product"
+    header:
+      admin_page: "Admin Page"
     application:
       title: "Camera shop"
     admin_layout:
